[metadata]
name = pysatTutorials
version = 0.0.1
url = https://github.com/pysat/pysatTutorials
author = Russell Stoneback, et al.
author_email = pysat.developers@gmail.com
description = 'pysat Tutorials'
keywords =
  pysat
  demo
  tutorials
classifiers =
  Development Status :: 3 - Alpha
  Topic :: Scientific/Engineering :: Physics
  Topic :: Scientific/Engineering :: Atmospheric Science
  Intended Audience :: Science/Research
  License :: OSI Approved :: BSD License
  Natural Language :: English
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Operating System :: MacOS :: MacOS X
  Operating System :: POSIX :: Linux
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.5
setup_requires =
  setuptools >= 38.6
  pip >= 10
include_package_data = True
zip_safe = False
packages = find:
install_requires =
  jupyter
  numpy
  matplotlib
  pysat >= 3.0.0
  pysatMadrigal
  pysatNASA
  pysatSpaceWeather
  scipy


[flake8]
max-line-length = 80
ignore =
  D200
  D202
  W503
